:white_check_mark: [#159] 썸네일 태그 관련 테스트 코드 수정